{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 61,
  "lineage": "b67a8ecb-12ed-f16d-b1a0-901d6e81dcb1",
  "resources": [
    {
      "module": "module.security_group[\"skills-sqs-eks-nodegroup-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:security-group/sg-0998e5e9e25f1f856",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0998e5e9e25f1f856",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "skills-sqs-eks-nodegroup-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skills-sqs-eks-nodegroup-sg",
              "karpenter.sh/discovery": "skills-sqs-cluster"
            },
            "tags_all": {
              "Name": "skills-sqs-eks-nodegroup-sg",
              "karpenter.sh/discovery": "skills-sqs-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0998e5e9e25f1f856",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:route-table/rtb-09eeb97cbb32afc92",
            "default_route_table_id": "rtb-09eeb97cbb32afc92",
            "id": "rtb-09eeb97cbb32afc92",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "skills-sqs-default-rtb"
            },
            "tags_all": {
              "Name": "skills-sqs-default-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:security-group/sg-011ccd691b73b00c7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-011ccd691b73b00c7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skills-sqs-default-sg"
            },
            "tags_all": {
              "Name": "skills-sqs-default-sg"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e75c8bf5dc57ab0",
            "arn": "arn:aws:ec2:us-west-2:076472864721:elastic-ip/eipalloc-00e75c8bf5dc57ab0",
            "association_id": "eipassoc-0e9500f1345f4aa53",
            "domain": "vpc",
            "id": "eipalloc-00e75c8bf5dc57ab0",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a3276b9f4bc68115",
            "private_dns": "ip-10-0-0-237.us-west-2.compute.internal",
            "private_ip": "10.0.0.237",
            "public_dns": "ec2-35-164-146-24.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.146.24",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "public-0-eip"
            },
            "tags_all": {
              "Name": "public-0-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-00e75c8bf5dc57ab0",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03581d06f196a7a11",
            "arn": "arn:aws:ec2:us-west-2:076472864721:elastic-ip/eipalloc-03581d06f196a7a11",
            "association_id": "eipassoc-0b13b0a4cc3ebdb86",
            "domain": "vpc",
            "id": "eipalloc-03581d06f196a7a11",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0973e990177fb7791",
            "private_dns": "ip-10-0-1-141.us-west-2.compute.internal",
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-32-186-90-108.us-west-2.compute.amazonaws.com",
            "public_ip": "32.186.90.108",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "public-1-eip"
            },
            "tags_all": {
              "Name": "public-1-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-03581d06f196a7a11",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:internet-gateway/igw-089c288e3ccdb215a",
            "id": "igw-089c288e3ccdb215a",
            "owner_id": "076472864721",
            "region": "us-west-2",
            "tags": {
              "Name": "skills-sqs-igw"
            },
            "tags_all": {
              "Name": "skills-sqs-igw"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "igw-089c288e3ccdb215a",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e75c8bf5dc57ab0",
            "association_id": "eipassoc-0e9500f1345f4aa53",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d345d75f88e484da",
            "network_interface_id": "eni-0a3276b9f4bc68115",
            "private_ip": "10.0.0.237",
            "public_ip": "35.164.146.24",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-059ef6c472abcaced",
            "tags": {
              "Name": "skills-sqs-natgw-a"
            },
            "tags_all": {
              "Name": "skills-sqs-natgw-a"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0d345d75f88e484da",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03581d06f196a7a11",
            "association_id": "eipassoc-0b13b0a4cc3ebdb86",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d43c9f2d95cc22d0",
            "network_interface_id": "eni-0973e990177fb7791",
            "private_ip": "10.0.1.141",
            "public_ip": "32.186.90.108",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a6060ae2f245e717",
            "tags": {
              "Name": "skills-sqs-natgw-c"
            },
            "tags_all": {
              "Name": "skills-sqs-natgw-c"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0d43c9f2d95cc22d0",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03c18719b8a8c3a6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d345d75f88e484da",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-03c18719b8a8c3a6b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-03c18719b8a8c3a6b"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c6332d583c904581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d43c9f2d95cc22d0",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-07c6332d583c90458",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-07c6332d583c90458"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-089c288e3ccdb215a",
            "id": "r-rtb-08917c600b027307a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-08917c600b027307a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-08917c600b027307a"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:route-table/rtb-03c18719b8a8c3a6b",
            "id": "rtb-03c18719b8a8c3a6b",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d345d75f88e484da",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skills-sqs-private-a-rtb"
            },
            "tags_all": {
              "Name": "skills-sqs-private-a-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-03c18719b8a8c3a6b",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:route-table/rtb-07c6332d583c90458",
            "id": "rtb-07c6332d583c90458",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d43c9f2d95cc22d0",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skills-sqs-private-c-rtb"
            },
            "tags_all": {
              "Name": "skills-sqs-private-c-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-07c6332d583c90458",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:route-table/rtb-08917c600b027307a",
            "id": "rtb-08917c600b027307a",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089c288e3ccdb215a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skills-sqs-public-rtb"
            },
            "tags_all": {
              "Name": "skills-sqs-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-08917c600b027307a",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ad027c6e9594af",
            "region": "us-west-2",
            "route_table_id": "rtb-03c18719b8a8c3a6b",
            "subnet_id": "subnet-0b192107664294026"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0a6ad027c6e9594af",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0274febce82666f8e",
            "region": "us-west-2",
            "route_table_id": "rtb-07c6332d583c90458",
            "subnet_id": "subnet-079b845a7244e15fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0274febce82666f8e",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fe4ed82e8ae1abc",
            "region": "us-west-2",
            "route_table_id": "rtb-08917c600b027307a",
            "subnet_id": "subnet-059ef6c472abcaced"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-03fe4ed82e8ae1abc",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07093563f621cba45",
            "region": "us-west-2",
            "route_table_id": "rtb-08917c600b027307a",
            "subnet_id": "subnet-0a6060ae2f245e717"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-07093563f621cba45",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:subnet/subnet-0b192107664294026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b192107664294026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "skills-sqs-private-a",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "skills-sqs-private-a",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0b192107664294026",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:subnet/subnet-079b845a7244e15fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079b845a7244e15fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "skills-sqs-private-c",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "skills-sqs-private-c",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-079b845a7244e15fc",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:subnet/subnet-059ef6c472abcaced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059ef6c472abcaced",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "skills-sqs-public-a",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "skills-sqs-public-a",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-059ef6c472abcaced",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:subnet/subnet-0a6060ae2f245e717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6060ae2f245e717",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "skills-sqs-public-c",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "skills-sqs-public-c",
              "karpenter.sh/discovery": "skills-sqs-cluster",
              "kubernetes.io/cluster/skills-sqs-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d0e9b008569197ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0a6060ae2f245e717",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"skills-sqs-vpc\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:076472864721:vpc/vpc-0d0e9b008569197ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0213aa550b9afd1d0",
            "default_route_table_id": "rtb-09eeb97cbb32afc92",
            "default_security_group_id": "sg-011ccd691b73b00c7",
            "dhcp_options_id": "dopt-0a858f130e3485a96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0e9b008569197ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09eeb97cbb32afc92",
            "owner_id": "076472864721",
            "region": "us-west-2",
            "tags": {
              "Name": "skills-sqs-vpc"
            },
            "tags_all": {
              "Name": "skills-sqs-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpc-0d0e9b008569197ad",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}